--- a/themes/my-theme/layouts/partials/header.html
+++ b/themes/my-theme/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="flex">
     <img src="/img/email.png" alt="Logo" class="w-8 h-8 mr-2">
     <h1 class="inline text-lg underline font-medium leading-normal">
-      <a href="mailto:mahmudul006@gmail.com">{{ .Site.Params.email }}</a>
+      <a href="mailto:{{ .Site.Params.email }}">{{ .Site.Params.email }}</a>
     </h1>
   </div>
   {{ partial "menu.html" }}
