--- a/themes/my-theme/layouts/partials/footer.html
+++ b/themes/my-theme/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <div class="text-center p-8">
-  <p>Copyright {{ now.Year }}. All rights reserved.</p>
+  <p>&#169; {{ now.Year }} {{ .Site.Params.Name }}. Powered by <a href="https://gohugo.io/">Hugo</a>.</p>
 </div>
